# qak

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build-wasm.sh  index.html
data/: parser_benchmark.qak  parser_eol.qak  parser_expression.qak  parser_function.qak  parser_module.qak  parser_module_var.qak  parser_v_0_1.qak  playground.txt  simple.qak  tokens.qak  tokens_error.qak
src/: array.c  array.h  array_c.h  error.cpp  error.h  io.cpp  io.h  map.h  memory.h  memory_c.c  memory_c.h  parser.cpp  parser.h  qak.cpp  qak.h  qak_c_api.cpp  qak_c_api.h  source.h  tokenizer.c  tokenizer.cpp  tokenizer.h  tokenizer_c.h  types.h
src/apps/: qak.cpp  test.h  test_allocation.c  test_c_api.c  test_map.cpp  test_memory.c  test_memory.cpp  test_parser.c  test_parser.cpp  test_tokenizer.c  test_tokenizer.cpp
src/c/: allocation.c  allocation.h  error.c  error.h  io.c  io.h  parser.c  parser.h  qak.c  qak.h  tokenizer.c  tokenizer.h  types.h
wasm/: index.html  qak_post.js  qak_pre.js
